# movie_data

./: .gitignore  Cargo.toml  dev.env  example.env
migrations/: 20260210073150_create_users.sql
src/: app_state.rs  configuration.rs  main.rs  net.rs
src/auth/: auth_middleware.rs  mod.rs
src/connectors/: mod.rs  omdb.rs
src/dal/: cache_repo.rs  mod.rs  persistent_repo.rs
src/jobs/: kinopoisk_fetcher.rs  mod.rs  omdb_periodic_fetcher.rs
src/utils/: encryption.rs  mod.rs  token.rs
