[package]
name = "movie_data"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-test = "18.7.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "*"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "chrono",
] }
chrono = "*"
argon2 = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
rand = "0.10.0"
async-trait = "0.1.89"
tokio-cron-scheduler = "*"
reqwest = { version = "0.13.2", features = ["json"] }

[dependencies.redis]
version = "*"
features = ["r2d2", "aio", "connection-manager", "tokio-comp"]
